--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "ramwadi-nodejs",
   "version": "1.0.0",
   "description": "**Edit a file, create a new file, and clone from Bitbucket in under 2 minutes**",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "jest --watch --runInBand"
   },
   "repository": {
     "type": "git",
@@ -12,5 +14,13 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/ramwadi/ramwadi-nodejs#readme"
+  "homepage": "https://bitbucket.org/ramwadi/ramwadi-nodejs#readme",
+  "devDependencies": {
+    "jest": "^28.0.3",
+    "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "jsonwebtoken": "^8.5.1"
+  }
 }
