--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
+    "build": "tsc -p .",
     "test": "jest --watch --runInBand"
   },
   "repository": {
@@ -21,6 +22,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "config": "^3.3.7",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1"
   }
 }
