--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.27.2",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1"
   }
